[package]
name = "l2-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = "0.13.3"
rand_core = "0.6.4"
prover = { git = "https://github.com/jonas089/zk-vrf-consensus" }
zk-logic = { git = "https://github.com/jonas089/zk-vrf-consensus" }
risc0-zkvm = { version = "=2.0.1", default-features = false }

ciphercurve-trie = { git = "https://github.com/jonas089/ciphercurve-trie" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1.38", features = ["full"] }
jsonrpsee-core = "0.20.3"
anyhow = "1.0"
indicatif = "0.17.8"
axum = "0.7.5"
reqwest = "0.12.5"
bincode = "1.3.3"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
rusqlite = "0.32"
viuer = "0.6"
image = "0.24"


[features]
local-net = []
